--- a/src/components/Chat/Chat.module.css
+++ b/src/components/Chat/Chat.module.css
@@ -79,19 +79,125 @@ big {
     width:100%; 
     display:flex ; 
     justify-content: space-between;
-    /* flex:2;  */
-    height:10vh ; 
     align-items: center;
+    /* flex:2 ;  */
+    height:10vh ; 
 }
 .room__name {
     margin-left: 1vw ; ;
 }
-.room__info > button.leave {
+button.leave {
     /* color: */
+    height:90% ; 
+    margin-right: 1vw;
+    padding:0 1vw ; 
+    font-size:3.2vmin ; 
+    color:white ; 
+    background-color: var(--leave-btn-color);
+    border:0 ; 
+    border-radius: 10px; ;
+    transition:400ms ease ; 
+    border:1px solid var(--leave-btn-color);
+    margin-top: 0.5vh;
+}
+a {
+    height:100% ; 
+}
+button.leave:hover {
+    color:var(--leave-btn-color) ; 
+    background-color: whitesmoke;
 }
 .main__chat {
     border:1px solid black ;
-    height:75vh ; 
+    height:72vh ; 
     width:100% ; 
+    overflow-x:hidden ; 
     overflow-y: auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+}
+
+.OutgoingMessage{
+    border:1px solid black ; 
+    /* width:100% ;  */
+    max-width:40% ; 
+    padding:3vmin ; 
+    font-size:3.4vmin ; 
+    color:white ; 
+    background-color: var(--accent-color) ; 
+    margin: 1.5vh 0 ; 
+    margin-left:1vh ; 
+}
+.IncomingMessage{
+
+    border:1px solid black ; 
+    width:100% ; 
+    max-width:40% ; 
+    padding:3vmin ; 
+    font-size:3.4vmin ; 
+    color:black ; 
+    background-color: whitesmoke ; 
+    margin: 1.5vh 0 ; 
+    margin-left:56%;  
+}
+.tooltip {
+    /* border:1px solid black ;  */
+    width:95.5% ; 
+    padding:2vmin 3vmin ; 
+    font-size:4vmin ; 
+    color:white ; 
+    background-color: var(--accent-color) ; 
+    margin: 1.5vh 0 ; 
+    margin-left:1vh ;
+    text-align: center;
+    border-radius: 15px;
+}
+.message__input {
+    width:70% ; 
+    padding:2vh 0 ; 
+    font-size:120%  ; 
+}
+.message__input:focus {
+    border:2px solid var(--accent-color) ; 
+    box-shadow:none ; 
+    outline:none ; 
+}
+.send__msg{
+    /* color:blue  ;  */
+    /* height:40px ;  */
+    width:8% ; 
+    height:40% ; 
+    margin-top: 203;
+    background-color: blue;
+    border:0 ;  
+}
+.send__msg:active{
+    transform:scale(0.9)
+}
+.message__box{
+    /* height:1000%;  */
+    /* height:48vh; */
+    width:100% ; 
+    display:flex ; 
+    justify-content: center;
+    align-items: center;
+    height:20vh ; 
+    border:1px solid black ; 
+}
+/* i {
+
+} */
+.tired {
+    height:100% ; 
+    width:100% ; 
+    display:flex ; 
+    justify-content: center;
+    align-items: center;
+}
+.icon__container > i {
+    font-size:1rem ; 
+    color:white ; 
+    margin:0 ; 
 }
