--- a/src/components/CreateRoom/CreateRoom.module.css
+++ b/src/components/CreateRoom/CreateRoom.module.css
@@ -19,7 +19,7 @@
     flex-direction:column ; 
     background-color:var(--accent-color) ;
 }
-form {
+.form {
     border:1px solid black ; 
     background-color: var(--form-bg);
 }
@@ -32,7 +32,7 @@ label {
     font-size:5vmin ; 
     color:white ; 
 }
-input {
+.input {
     width:100% ; 
     padding:2vh 0 ; 
     font-size:100% ; 
