--- a/src/components/MainPage/MainPage.module.css
+++ b/src/components/MainPage/MainPage.module.css
@@ -16,12 +16,15 @@
     height:100vh; 
     width:100vw ; 
     background:linear-gradient(45deg , rgb(190, 63, 190) , white) ; 
-    overflow: hidden;
+    overflow-x: hidden;
 }
 
 i {
     font-size:30vmin ; 
     color:var(--accent-color);
+    position:relative ; 
+    animation: jump 3s infinite;
+    /* animation-timing-function: ease-in-out;  */
     margin:3vmin 0 ; 
 }
 h2.logo {
@@ -50,4 +53,15 @@ h2.logo {
     color:var(--accent-color) ; 
     background-color: white;
     transform: scale(1.05);
+}
+
+
+@keyframes jump {
+    50% {
+        transform:translateY(-1vh)
+    }
+
+    100%{
+        transform:translateY(0) ; 
+    }
 }
