--- a/src/components/Chat/Chat.module.css
+++ b/src/components/Chat/Chat.module.css
@@ -120,36 +120,28 @@ button.leave:hover {
 
 .OutgoingMessage{
     border:1px solid black ; 
-    width:95% ; 
-    text-align: left;
-    color:white ; 
-    overflow-wrap: break-word;
-    border-radius: 5px ; ;
-    background-color: var(--accent-color);
-    margin-left:0.5%;
+    padding:1vh 0 ; 
+
 }
 
 .IncomingMessage{
     border:1px solid black ; 
-    width:95% ; 
-    text-align: right;
-    overflow-wrap: break-word;
-    border-radius: 5px ; ;
-    color:black ; 
-    margin-left:4%;
+    padding:1vh 0 ; 
+
 }
 .tooltip {
-    /* border:1px solid black ;  */
+    text-align: center;
+    border-radius: 15px;
     width:95.5% ; 
-    padding:1.1vmin 0vmin ; 
+    padding:2vmin 3vmin ; 
     font-size:4vmin ; 
     color:white ; 
-    margin:auto ; 
-    /* margin-left: auto;  */
-    /* margin-left:1vh ; */
+    margin: 1vh 0 ; 
+    margin-left:1vh ;
     text-align: center;
     border-radius: 15px;
 }
+
 .message__input {
     width:70% ; 
     padding:2vh 0 ; 
