--- a/src/components/Chat/Chat.module.css
+++ b/src/components/Chat/Chat.module.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Raleway:wght@400&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@500&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@100&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap');
 
 :root {
     --accent-color:rgb(187, 20, 202);
@@ -34,18 +34,18 @@
     overflow-y: auto;
 }
 .info > .logo {
-    font-size:5vmin ; 
+    font-size:2.6vw ; 
     font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif ; 
     font-weight:600;
     margin-top:3vh ;
 }
 big {
-    font-size:4vmin ; 
+    font-size:2vw ; 
     font-family: 'Quicksand', sans-serif;
     margin:1vh 0 ;
 }
 .users {
-    margin-top:6vmin;
+    margin-top:5vw;
     width:100% ; 
     display:flex ; 
     flex-direction: column;
@@ -57,7 +57,7 @@ big {
     width:100% ; 
     text-align: center;
     padding:2.5vh 0 ; 
-    font-size:3.5vmin ;
+    font-size:1.65vw ;
     transition:400ms ease-out ; 
     font-family: 'Raleway', sans-serif;
 }
@@ -93,7 +93,7 @@ button.leave{
     height:90% ; 
     margin-right: 1vw;
     padding:0 1vw ; 
-    font-size:3.2vmin ; 
+    font-size:1.5vw ; 
     color:white ; 
     background-color: var(--leave-btn-color);
     border:0 ; 
@@ -122,7 +122,7 @@ button.leave:hover {
 .OutgoingMessage{
     border:1px solid black ; 
     max-width:80% ; 
-    font-size:1.3vw ; 
+    font-size:1.5vw ; 
     padding:2vh 1vw ; 
     color:white ; 
     background-color: var(--accent-color);
@@ -135,7 +135,7 @@ button.leave:hover {
 .IncomingMessage{
     border:1px solid black ; 
     max-width:80% ; 
-    font-size:1.6vw ; 
+    font-size:1.5vw ; 
     padding:2vh 1vw ; 
     color:black; 
     background-color:whitesmoke;
@@ -148,28 +148,24 @@ button.leave:hover {
 
 }
 .tooltip {
-    text-align: center;
-    
-    border-radius: 15px;
-    width:95.5% ; 
-    padding:2vmin 3vmin ; 
-    font-size:4vmin ; 
-    color:white ; 
-    margin: 2vh 0 ; 
-    /* width:0 ;  */
-    margin-left:1vh ;
-    text-align: center;
-    border-radius: 15px;
+  color:white ; 
+  padding:2vh 0 ; 
+  margin:2vh auto ; 
+  font-size:2vw ; 
+  border-radius: 15px;
+  max-width:95% ; 
+  font-family:'Quick sand' , sans-serif ; 
+
     
 }
 
 .message__input {
     width:70% ; 
     padding:2vh 0 ; 
-    font-size:120%  ; 
+    font-size:1.5vw  ; 
 }
 .message__input:focus {
-    border:3px solid var(--accent-color) ; 
+    border:2px solid var(--accent-color) ; 
     box-shadow:none ; 
     outline:none ; 
 }
@@ -207,10 +203,10 @@ button.leave:hover {
     align-items: center;
 }
  .send__msg > i {
-    font-size:150% ; 
+    font-size:1.6vw; 
     color:white ; 
     margin:0 ; 
-    animation: send_animation ease-in-out 2s infinite;
+    animation: send__animation;
 }
 
 @keyframes appear {
@@ -226,11 +222,8 @@ button.leave:hover {
 }
 
 @keyframes send_animation {
-    50%{
-        transform: scale(1.3);
-    }
-    100% {
-        transform:scale(1) ; 
+    to {
+        color:white ; 
     }
 }
 .msg__wrapper {
@@ -240,9 +233,11 @@ button.leave:hover {
     margin-left: 1%;
     font-size:1.8vw ; 
     color:rgb(46, 136, 209) ; 
-    font-weight:800 ; 
+    font-weight:800 ;
+    font-family: 'Quicksand', sans-serif; 
 }
 .name__for {
+    font-family: 'Quicksand', sans-serif;
     font-size:1.8vw ; 
     color:rgb(46, 136, 209) ; 
     font-weight:800 ; 
