--- a/src/components/Chat/Chat.module.css
+++ b/src/components/Chat/Chat.module.css
@@ -1,252 +1,255 @@
-@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@400&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@500&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Raleway:wght@400&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Quicksand:wght@500&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@300&display=swap");
 
 :root {
-    --accent-color:rgb(187, 20, 202);
-    --select-color:rgb(54, 54, 172) ;
-    --leave-btn-color:red ;
+  --accent-color: rgb(187, 20, 202);
+  --select-color: rgb(54, 54, 172);
+  --leave-btn-color: red;
 }
 * {
-    padding:0  ; 
-    margin: 0;
+  padding: 0;
+  margin: 0;
 }
 *::selection {
-    background-color: var(--select-color);
+  background-color: var(--select-color);
 }
 .page {
-    height:100vh ; 
-    width:100vw ; 
-    display:flex ;
-    justify-content: flex-start;
-    align-items: flex-start;
-    overflow:hidden ; 
+  height: 100vh;
+  width: 100vw;
+  display: flex;
+  justify-content: flex-start;
+  align-items: flex-start;
+  overflow: hidden;
 }
 .info {
-    height:100vh ; 
-    flex:1.5 ; 
-    display:flex ; 
-    flex-direction: column;
-    /* justify-content: center; */
-    align-items: center;
-    color:white;
-    background-color: var(--accent-color);
-    overflow-y: auto;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  /* justify-content: center; */
+  align-items: center;
+  color: white;
+  background-color: var(--accent-color);
+  overflow-y: auto;
 }
 .info > .logo {
-    font-size:2.6vw ; 
-    font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif ; 
-    font-weight:600;
-    margin-top:3vh ;
+  font-size: 2.6vw;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-weight: 600;
+  margin-top: 3vh;
 }
 big {
-    font-size:2vw ; 
-    font-family: 'Quicksand', sans-serif;
-    margin:1vh 0 ;
+  font-size: 2vw;
+  font-family: "Quicksand", sans-serif;
+  margin: 1vh 0;
 }
 .users {
-    margin-top:5vw;
-    width:100% ; 
-    display:flex ; 
-    flex-direction: column;
-    align-items: center;
+  margin-top: 5vw;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 .user {
-    border-top:1px solid white ; 
-    list-style: none;
-    width:100% ; 
-    text-align: center;
-    padding:2.5vh 0 ; 
-    font-size:1.65vw ;
-    transition:400ms ease-out ; 
-    font-family: 'Raleway', sans-serif;
+  border-top: 1px solid white;
+  list-style: none;
+  width: 100%;
+  text-align: center;
+  padding: 2.5vh 0;
+  font-size: 1.65vw;
+  transition: 400ms ease-out;
+  font-family: "Raleway", sans-serif;
 }
 .user:hover {
-    color:var(--accent-color) ; 
-    background-color: white;
+  color: var(--accent-color);
+  background-color: white;
 }
 .users__wrapper {
-    width:100% ; 
-    border-bottom: 1px solid white;
+  width: 100%;
+  border-bottom: 1px solid white;
 }
 .chat {
-    width:60vw ; 
-    display: flex;
-    align-items: center;
-    flex-direction: column;
+  width: 60vw;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
 }
 .room__info {
-    border:1px solid black ;
-    width:100%; 
-    display:flex ; 
-    justify-content: space-between;
-    align-items: center;
-    /* flex:2 ;  */
-    height:10vh ; 
+  border: 1px solid black;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  /* flex:2 ;  */
+  height: 10vh;
 }
 .room__name {
-    margin-left: 1vw ; ;
+  margin-left: 1vw;
 }
 
-button.leave{
-    /* color: */
-    height:90% ; 
-    margin-right: 1vw;
-    padding:0 1vw ; 
-    font-size:1.5vw ; 
-    color:white ; 
-    background-color: var(--leave-btn-color);
-    border:0 ; 
-    border-radius: 10px; ;
-    transition:400ms ease ; 
-    border:1px solid var(--leave-btn-color);
-    margin-top: 0.5vh;
+button.leave {
+  /* color: */
+  height: 90%;
+  margin-right: 1vw;
+  padding: 0 1vw;
+  font-size: 1.5vw;
+  color: white;
+  background-color: var(--leave-btn-color);
+  border: 0;
+  border-radius: 10px;
+  transition: 400ms ease;
+  border: 1px solid var(--leave-btn-color);
+  margin-top: 0.5vh;
 }
 button.leave:hover {
-    color:var(--leave-btn-color) ; 
-    background-color: whitesmoke;
+  color: var(--leave-btn-color);
+  background-color: whitesmoke;
 }
 .main__chat {
-    border:1px solid black ;
-    height:72vh ; 
-    width:100% ; 
-    overflow-y: auto;
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: center;
-    overflow-x:hidden ; 
-    
+  border: 1px solid black;
+  height: 72vh;
+  width: 100%;
+  overflow-y: auto;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+  align-items: center;
+  overflow-x: hidden;
 }
 
-.OutgoingMessage{
-    border:1px solid black ; 
-    max-width:80% ; 
-    font-size:1.5vw ; 
-    padding:2vh 1vw ; 
-    color:white ; 
-    background-color: var(--accent-color);
-    margin-left: 1%;
-    overflow-wrap: break-word;
-    font-family: 'Poppins', sans-serif;
-   
+.OutgoingMessage {
+  border: 1px solid black;
+  max-width: 80%;
+  font-size: 1.5vw;
+  padding: 2vh 1vw;
+  color: white;
+  background-color: var(--accent-color);
+  margin-left: 1%;
+  overflow-wrap: break-word;
+  font-family: "Poppins", sans-serif;
 }
 
-.IncomingMessage{
-    border:1px solid black ; 
-    max-width:80% ; 
-    font-size:1.5vw ; 
-    padding:2vh 1vw ; 
-    color:black; 
-    background-color:whitesmoke;
-    
-    margin-left: 16%;
-    text-align: right;
-    overflow-wrap: break-word;
-    font-family: 'Poppins', sans-serif;
+.IncomingMessage {
+  border: 1px solid black;
+  max-width: 80%;
+  font-size: 1.5vw;
+  padding: 2vh 1vw;
+  color: black;
+  background-color: whitesmoke;
 
-
+  margin-left: 16%;
+  text-align: right;
+  overflow-wrap: break-word;
+  font-family: "Poppins", sans-serif;
 }
 .tooltip {
-  color:white ; 
-  padding:2vh 0 ; 
-  margin:2vh auto ; 
-  font-size:2vw ; 
+  color: white;
+  padding: 2vh 0;
+  margin: 2vh auto;
+  font-size: 1.7vw;
   border-radius: 15px;
-  max-width:95% ; 
-  font-family:'Quick sand' , sans-serif ; 
-
-    
+  max-width: 95%;
+  font-family: "Quick sand", sans-serif;
 }
 
 .message__input {
-    width:70% ; 
-    padding:2vh 0 ; 
-    font-size:1.5vw  ; 
+  width: 70%;
+  padding: 2vh 0;
+  font-size: 1.5vw;
+  margin: 0 1vw;
 }
 .message__input:focus {
-    border:2px solid var(--accent-color) ; 
-    box-shadow:none ; 
-    outline:none ; 
+  border: 2px solid var(--accent-color);
+  box-shadow: none;
+  outline: none;
 }
-.send__msg{
-    /* color:blue  ;  */
-    /* height:40px ;  */
-    width:8% ; 
-    padding:2.5vh 0 ;  
-    background-color: blue;
-    border:0 ;  
-    margin:0 0.5vw ; 
-
+.send__msg {
+  /* color:blue  ;  */
+  /* height:40px ;  */
+  width: 8%;
+  padding: 2.5vh 0;
+  background-color: blue;
+  border: 0;
 }
-.send__msg:active{
-    transform:scale(0.9)
+.send__msg:active {
+  transform: scale(0.9);
 }
-.message__box{
-    /* height:1000%;  */
-    /* height:48vh; */
-    width:100% ; 
-    display:flex ; 
-    justify-content: center;
-    align-items: center;
-    height:20vh ; 
-    border:1px solid black ; 
+.message__box {
+  /* height:1000%;  */
+  /* height:48vh; */
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 20vh;
+  border: 1px solid black;
 }
 /* i {
 
 } */
 .tired {
-    height:100% ; 
-    width:100% ; 
-    display:flex ; 
-    justify-content: center;
-    align-items: center;
+  height: 100%;
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
- .send__msg > i {
-    font-size:1.6vw; 
-    color:white ; 
-    margin:0 ; 
-    animation: send__animation;
+.send__msg > i {
+  font-size: 1.6vw;
+  color: white;
+  margin: 0;
+  animation: send__animation;
 }
 
 @keyframes appear {
-    0% {
-        opacity: 0;
-    }
-    50%{
-        opacity:0.5 ; 
-    }
-    100% {
-        opacity:1 ; 
-    }
+  0% {
+    opacity: 0;
+  }
+  50% {
+    opacity: 0.5;
+  }
+  100% {
+    opacity: 1;
+  }
 }
 
 @keyframes send_animation {
-    to {
-        color:white ; 
-    }
+  to {
+    color: white;
+  }
 }
 .msg__wrapper {
-   margin:2vh 0 ;  
+  margin: 2vh 0;
 }
 .name {
-    margin-left: 1%;
-    font-size:1.8vw ; 
-    color:rgb(46, 136, 209) ; 
-    font-weight:800 ;
-    font-family: 'Quicksand', sans-serif; 
+  margin-left: 1%;
+  font-size: 1.8vw;
+  color: rgb(46, 136, 209);
+  font-weight: 800;
+  font-family: "Quicksand", sans-serif;
 }
 .name__for {
-    font-family: 'Quicksand', sans-serif;
-    font-size:1.8vw ; 
-    color:rgb(46, 136, 209) ; 
-    font-weight:800 ; 
-    /* margin-left: 8%; */
-    text-align: right;
-    padding-right: 2%;
+  font-family: "Quicksand", sans-serif;
+  font-size: 1.8vw;
+  color: rgb(46, 136, 209);
+  font-weight: 800;
+  /* margin-left: 8%; */
+  text-align: right;
+  padding-right: 2%;
 }
 
 .hero_wr {
-    height:100% ; 
-    flex:1 ; 
+  height: 100%;
+  flex: 3;
+  font-size: 2.5vw;
+  color: var(--accent-color);
+  font-family: "Poppins", sans-serif;
+}
+
+.smiley__wrapper {
+  margin-left: 2vw;
+}
+.smiley__wrapper > i {
+  font-size: 3vw;
 }
