--- a/src/components/Chat/Picker.css
+++ b/src/components/Chat/Picker.css
@@ -1,13 +1,13 @@
 .sc-bdVaJa {
-  height: 100% !important;
-  border: 1px solid black;
+	height: 100% !important;
+	border: 1px solid black;
 }
 span[role="presentation"] > img {
-  width: 30px !important ;
-  height: 30px !important ;
+	width: 30px !important ;
+	height: 30px !important ;
 }
 .sc-bwzfXH {
-  margin: 0 !important;
-  height: 100% !important;
-  width: 100% !important ;
+	margin-top: 0 !important;
+	height: 100% !important;
+	width: 100% !important ;
 }
