--- a/src/components/CreateRoom/CreateRoom.module.css
+++ b/src/components/CreateRoom/CreateRoom.module.css
@@ -1,61 +1,66 @@
 :root {
-    --accent-color:rgb(187, 20, 202);
-    --select-color:rgb(54, 54, 172) ; 
-    --form-bg:rgb(5, 16, 110) ; 
+	--accent-color: rgb(187, 20, 202);
+	--select-color: rgb(54, 54, 172);
+	--form-bg: rgb(5, 16, 110);
 }
 * {
-    padding:0 ; 
-    margin: 0;
+	padding: 0;
+	margin: 0;
 }
 *::selection {
-    background-color:var(--select-color) ;
+	background-color: var(--select-color);
 }
 .page {
-    height:100vh ; 
-    width:100vw ; 
-    display:flex ; 
-    justify-content: center;
-    align-items: center;
-    flex-direction:column ; 
-    background-color:var(--accent-color) ;
+	height: 100vh;
+	width: 100vw;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	flex-direction: column;
+	background-color: var(--accent-color);
+}
+.heading {
+	color: White;
+}
+.heading h1 {
+	font-size: 4vw;
+	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+		Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 .form {
-    border:1px solid black ; 
-    background-color: var(--form-bg);
+	border: 1px solid black;
+	background-color: var(--form-bg);
 }
 .wrapper {
-    margin:2.5vh 1vw ; 
-
+	margin: 2.5vh 3vw;
 }
 label {
-    margin:1vh 0 ; 
-    font-size:5vmin ; 
-    color:white ; 
+	margin: 1vh 0;
+	font-size: 5vmin;
+	color: white;
 }
 .input {
-    width:100% ; 
-    padding:2vh 0 ; 
-    font-size:100% ; 
+	width: 100%;
+	padding: 2vh 0;
+	font-size: 100%;
 }
 .btn {
-    padding:3vh 2vw ; 
-    font-size:140% ; 
-    border:0; 
-    background-color: yellow;
-    color:var(--form-bg) ; 
-    border-radius: 10px;
-    margin:1vh 0 ; 
-    border:1.5px solid yellow ; 
-    transition: 400ms ease-in-out;
+	padding: 3vh 2vw;
+	font-size: 140%;
+	border: 0;
+	background-color: yellow;
+	color: var(--form-bg);
+	border-radius: 10px;
+	margin: 1vh 0;
+	border: 1.5px solid yellow;
+	transition: 400ms ease-in-out;
 }
 .btn:hover {
-    color:yellow ; 
-    background-color: var(--form-bg);
-
+	color: yellow;
+	background-color: var(--form-bg);
 }
-
 .msg {
-    color:white ; 
-    margin:1vh 1vw ; 
-    font-size:1.5vw ; 
+	color: white;
+	margin: 1vh 1vw;
+	font-size: 1.5vw;
 }
