--- a/src/components/CreateRoom/CreateRoom.module.css
+++ b/src/components/CreateRoom/CreateRoom.module.css
@@ -1,5 +1,5 @@
 :root {
-	--accent-color: rgb(187, 20, 202);
+	--accent-color: #bd14cc;
 	--select-color: rgb(54, 54, 172);
 	--form-bg: rgb(5, 16, 110);
 }
